/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java Library project to get you started.
 * For more details take a look at the Java Libraries chapter in the Gradle
 * User Manual available at https://docs.gradle.org/6.3/userguide/java_library_plugin.html
 */

plugins {
    id 'java'
    id 'application'
}

repositories {
    // Use jcenter for resolving dependencies.
    // You can declare any Maven/Ivy/file repository here.
    jcenter()
}

java {
    sourceCompatibility = JavaVersion.VERSION_15
    targetCompatibility = JavaVersion.VERSION_15
}

dependencies {
    // This dependency is used internally, and not exposed to consumers on their own compile classpath.
    implementation 'com.google.guava:guava:28.2-jre'

    implementation 'org.glassfish:javax.json:1.1.4'
    implementation 'com.github.seancfoley:ipaddress:5.3.3'
    implementation 'org.apache.directory.studio:org.apache.commons.io:2.4'
    implementation 'de.slackspace:openkeepass:0.8.2'
    implementation 'com.sun.mail:javax.mail:1.6.2'
    implementation 'com.metapossum:metapossum-scanner:1.0.1'
    implementation 'org.glassfish:json:2.0.0'
    implementation 'org.glassfish.jsonp:providers:2.0.0-RC3'

    // Use JUnit test framework
    testImplementation 'junit:junit:4.12'
}

application {
    mainClassName = 'org.privacyinternational.thornsec.core.Main'
}

jar {
    manifest {
        attributes "Main-Class": "org.privacyinternational.thornsec.core.Main"
    }

    from {
        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
    }
}